<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleCode.SchedulesView_Week">

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ScheduleWeekView_TB_Back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/backbutton"
            />

        <TextView
            android:id="@+id/ScheduleWeekView_TB_Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/MainMenu_Schedules"
            />

        <ImageButton
            android:id="@+id/ScheduleWeekView_TB_Help"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/questionmark"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ScheduleWeekView_Main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/TopBar"
        app:layout_constraintBottom_toTopOf="@+id/BottomBar"
        >

        <ScrollView
            android:id="@+id/ScheduleWeekView_MainScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >



            </LinearLayout>

        </ScrollView>
    </RelativeLayout>



    <LinearLayout
        android:id="@+id/BottomBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/ScheduleWeekView_BB_Options"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Options"
            />

        <Button
            android:id="@+id/ScheduleWeekView_BB_Delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Delete"
            />

        <Button
            android:id="@+id/ScheduleWeekView_BB_Add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Add"
            />

        <Button
            android:id="@+id/ScheduleWeekView_BB_ImBored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Help"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>